<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Home">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="137dp"
        android:layout_marginTop="391dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="260dp"
        android:text="@string/here"
        android:textColor="#261206"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="77dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="502dp"
        android:text="@string/add"
        android:textColor="#261206"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="117dp"
        android:layout_marginTop="311dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="340dp"
        android:text="@string/drink"
        android:textColor="#261206"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="97dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="421dp"
        android:text="@string/your"
        android:textColor="#261206"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAddCaffeine"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="109dp"
        android:layout_marginTop="530dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="153dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/let_s_add_caffeine"
        android:textColor="#261206"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnViewDrinks"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="109dp"
        android:layout_marginTop="641dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/view_drinks"
        android:textColor="#261206"
        android:textSize="20sp" />

</RelativeLayout>